update resources for server deployment

--- a/k8s/server-deployment.yaml
+++ b/k8s/server-deployment.yaml
@@ -36,3 +36,9 @@ spec:
                 secretKeyRef:
                   name: pgpassword
                   key: PGPASSWORD
+          resources:
+            requests:
+              memory: "2Gi"
+              cpu: "1000m"
+            limits:
+              ephemeral-storage: 1Gi
