--- a/k8s/client-deployment.yaml
+++ b/k8s/client-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: client-deployment
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       component: web
@@ -18,3 +18,12 @@ spec:
           image: antanasleksas/multi-client
           ports:
             - containerPort: 3000
+          resources:
+            requests:
+              ephemeral-storage: 1Gi
+              memory: "1Gi"
+              cpu: "250m"
+            limits:
+              ephemeral-storage: 2Gi
+              memory: "4Gi"
+              cpu: "500m"
